# Kapybara

./: .gitignore  AGENTS.md  Dockerfile  docker-entrypoint.sh
core/: .gitignore  AGENTS.md  pyproject.toml
core/demo/io_helpers/: bash_helper_demo.py  shell_demo.py
core/scripts/: migrate_folder_memory_records_split.py
core/src/k/agent/: init_agent.py
core/src/k/agent/core/: agent.py  entities.py  media_tools.py  prompts.py  shell_tools.py
core/src/k/agent/memory/: compactor.py  entities.py  folder.py  migrate_split.py  simple.py  store.py
core/src/k/io_helpers/: bash_helper.py  shell.py
core/src/k/runner_helpers/: basic_os.py
core/src/k/starters/: telegram.py
core/src/k/starters/telegram/: __init__.py  __main__.py  api.py  cli.py  compact.py  events.py  runner.py
core/tests/: test_agent_mydeps_close.py  test_agent_run_compaction_pipeline.py  test_bash_helper.py  test_edit_file_skill.py  test_folder_memory_store.py  test_jsonl_memory_record_store.py  test_memory_record_dump_order.py  test_memory_record_id.py  test_read_media_tool.py  test_tg_starter_async_api.py  test_tg_starter_event.py  test_tg_starter_filters.py  test_tg_starter_runner.py
data/fs/: .bashrc
data/fs/skills/context/telegram/: SKILLS.md  stage_a  stage_a.sh
data/fs/skills/core/file_search/: SKILLS.md
data/fs/skills/core/web-fetch/: SKILLS.md  fetch.py
data/fs/skills/core/web-search/: SKILLS.md
data/fs/skills/core/web_fetch/: SKILLS.md
docker/: docker-compose.yaml
docker/basic-os/: Dockerfile
scripts/: docker-build.sh  docker-start.sh
(+17 files in other folders)
